# wuwa_CubieDerby

./: .gitignore  ARCHITECTURE.md  CONTRIBUTING.md  README.en.md  README.md  README.zh-CN.md  WutheringWaves_CubieDerby_1st_20250517.m  cubie_derby.py  pyproject.toml
.github/workflows/: ci.yml
cubie_derby_core/: __init__.py  accumulators.py  action_flow.py  analysis_jobs.py  champion_interactive.py  cli_dispatch.py  cli_parser.py  constants.py  effects.py  helper_factories.py  interactive_i18n.py  match_types.py  movement.py  npc.py  ordering.py  parallel_jobs.py  pre_action.py  race_runtime.py  race_types.py  reporting.py  round_flow.py  runner_actions.py  runners.py  setup_validation.py  skill_hooks.py  skills.py  smoke_test.py  stage_config.py  tournament.py  tournament_context.py  trace_logs.py  tracing.py  turn_flow.py
tests/: _shared.py  test_cli.py  test_cubie_derby.py  test_interactive_wizard.py  test_match_types_and_config.py  test_monte_carlo_pinned.py  test_movement_and_grid.py  test_npc.py  test_reporting_and_progress.py  test_skills.py  test_tournament.py
